--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -13,6 +13,7 @@ body {
     --blue-20: #CDCFDF;
     --pink-100: #79077B;
     --pink-80: #A960AB;
+    --gray-100: #535670;
     --gray-80: #75788D;
     --gray-60: #989AA9;
     --gray-20: #DDDDE2;
