--- a/css/styles.css
+++ b/css/styles.css
@@ -2008,8 +2008,8 @@ h1 {
   max-width: 996px;
 }
 
-.possibilities__information {
-  border-bottom: 2px solid var(--gray-20);
+.possibilities-form {
+  margin-bottom: -290px;
 }
 
 .possibilities-row {
@@ -2022,6 +2022,10 @@ h1 {
   margin: 0 auto;
   background-color: var(--gray-10);
   padding: 64px 124px;
+}
+
+.possibilities__information {
+  border-bottom: 2px solid var(--gray-20);
 }
 
 .possibilities-block-row {
@@ -2142,7 +2146,7 @@ h1 {
   align-items: flex-end;
   gap: 10px;
   position: relative;
-  right: 256px;
+  right: 260px;
 }
 
 .body-career-page .text-required {
